--- a/week 1/assignment/Q1.jl.ipynb
+++ b/week 1/assignment/Q1.jl.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The file `IntegerArray.txt` contains all of the 100,000 integers between 1 and 100,000 (inclusive) in some order, with no integer repeated.\n",
+    "\n",
+    "Your task is to compute the number of inversions in the file given, where the ith row of the file indicates the ith entry of an array.\n",
+    "\n",
+    "Because of the large size of this array, you should implement the fast divide-and-conquer algorithm covered in the video lectures."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The general idea is to use a modified merge sort, whereby the modified merge is a stateful function that also stores the number of inversion found during merging (definition of inversion as described in lecture). Once the merge is done, we will recover the number of inversion found during the sort."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -19,36 +51,10 @@
     }
    ],
    "source": [
-    "module Util\n",
     "using NBInclude\n",
     "nbinclude(joinpath(readchomp(`git rev-parse --show-toplevel`),\n",
     "                             \"resource\",\n",
-    "                             \"merge sort.jl.ipynb\"))\n",
-    "end\n",
-    "\n",
-    "custom_merge_sort = Util.custom_merge_sort"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "inversion_base (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inversion_base(v::Vector) = v"
+    "                             \"merge sort.jl.ipynb\"))"
    ]
   },
   {
@@ -121,124 +127,10 @@
    "source": [
     "function count_inversion(v::Vector)\n",
     "    (inversion_merge, get_total_inversion) = make_inversion_merge()\n",
-    "    custom_merge_sort(inversion_merge, inversion_base, v)\n",
+    "    custom_merge_sort(inversion_merge, v)\n",
     "    return get_total_inversion()\n",
     "end"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_inversion([])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "using FactCheck"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test `count_inversion`\n",
-      "  > sorted vector\n",
-      "  > reverse vector\n",
-      "  > random unsorted vector\n",
-      "6 facts verified.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "delayed_handler (generic function with 4 methods)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "if current_module() == Main\n",
-    "    facts(\"test `count_inversion`\") do\n",
-    "        context(\"sorted vector\") do\n",
-    "            @fact count_inversion(Int[]) --> 0\n",
-    "            @fact count_inversion([3, 6, 8, 9, 14]) --> 0\n",
-    "        end\n",
-    "        context(\"reverse vector\") do\n",
-    "            @fact count_inversion(collect(2:-1:1)) --> 1\n",
-    "            @fact count_inversion(collect(3:-1:1)) --> 3\n",
-    "            @fact count_inversion(collect(10:-1:1)) --> 45\n",
-    "        end\n",
-    "        context(\"random unsorted vector\") do\n",
-    "            @fact count_inversion([14, 51, 9, 1, 41, 7, 42]) --> 11\n",
-    "        end\n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2407905288"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integers = readcsv(\"IntegerArray.txt\")[:]\n",
-    "count_inversion(integers)\n",
-    "# Correct answer for this assignment is 2407905288."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
