Ride-along: Correct spelling in week 1 assignment.

--- a/week 1/assignment/Q1.jl.ipynb
+++ b/week 1/assignment/Q1.jl.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The general idea is to use a modified merge sort, whereby the modified merge is a stateful function that also stores the number of inversion found during merging (definition of inversion as described in lecture). Once the merge is done, we will recover the number of inversion found during the sort."
+    "The general idea is to use a modified merge sort, whereby the modified `merge` is a stateful function that also accumulates the number of inversions found during merging (definition of inversion as described in lecture). Once the merge sort is done, we will recover the total number of inversions in the original vector."
    ]
   },
   {
